Fri Apr 15 09:58:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: avoid version clash

Fri Apr 15 09:01:57 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* NEWS: fix typo

Fri Apr 15 08:59:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: fix overriding port or instance

Thu Apr 14 20:20:22 EDT 2011	JK Lowden <jklowden@freetds.org>
	* NEWS	add release notes
	* src/dblib/bcp.c
	- bcp_send row returns FAIL if dbconvert fails to 
	- convert the bound buffer to the column datatype

Mon Apr 11 17:33:55 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/tds.h include netinet/in.h

Mon Apr 11 15:40:25 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: fix OpenSSL compile problem

Mon Apr 11 15:33:27 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/tds/config.c src/tds/login.c:
	- support DBSETLDBNAME (really, this time)

Mon Apr 11 11:58:50 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/defncopy.c:
	- include sybfront.h instead of sqlfront.h (from patches #3172166)

Sat Apr  9 09:57:12 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am make dist works

Fri Apr  1 13:47:00 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: avoid string format problem

Thu Mar 31 10:20:43 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: forgot rc versions

Wed Mar 30 14:55:28 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: release version

Wed Mar 30 13:29:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/odbc.c src/tds/query.c:
	- avoid unnecessary prepare and unprepare

Sun Mar 27 12:34:23 EDT 2011	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h include/tds.h
	- src/dblib/dblib.c src/tds/config.c src/tds/login.c
	- Support DBSETLDBNAME

Tue Mar 22 13:51:32 EDT 2011	JK Lowden <jklowden@freetds.org>
	* autogen.sh neater output