@@ -8,5 +8,5 @@ num_limits.h
 sybase_character_sets.h
 tds_willconvert.h
 encodings.h
-types.h
+tds_types.h
 
