@@ -1,3 +1,7 @@
+Fri Apr 22 16:14:09 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/.cvsignore src/tds/Makefile.am src/tds/data.c:
+	- avoid header name clash
+
 Fri Apr 15 09:58:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* configure.ac: avoid version clash
 
@@ -3238,4 +3242,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3205.2.12 2011-04-15 07:58:41 freddy77 Exp $
+$Id: ChangeLog,v 1.3205.2.13 2011-04-22 14:14:16 freddy77 Exp $
